# Naphome-Korvo1

./: .gitignore  ALTERNATIVE_CONVERTERS.md  BEST_OPTIONS_NOW.md  COLAB_ALTERNATIVE_METHOD.md  COLAB_CONVERSION_INSTRUCTIONS.md  COLAB_COPY_PASTE.md  COLAB_FINAL_FIX.md  COLAB_FINAL_INSTRUCTIONS.md  COLAB_FIX_BUILD_ERROR.md  COLAB_FIX_CELL.md  COLAB_FIX_SPACES.md  COLAB_FIX_TENSORFLOW_ADDONS.md  COLAB_QUICK_FIX.md  COLAB_QUICK_REFERENCE.md  COLAB_SETUP.md  COLAB_SIMPLE_SOLUTION.md  COLAB_SINGLE_CELL.md  COLAB_TFLITE_FIX.md  COLAB_TRAINING_FIX.md  COLAB_WORKING_CELL.md  COLAB_WORKING_SOLUTION.md  CONVERSION_OPTIONS.md  CONVERSION_STATUS.md  CONVERT_ONNX_TO_TFLITE.md  DEPLOYMENT_STATUS.md  DEVELOPMENT_SETUP.md  Dockerfile.convert  EASY_CONVERSION.md  ES7210_DEBUG_SUMMARY.md  ES7210_INIT_ANALYSIS.md  FINAL_STATUS.md  FULL_TRAINING_STATUS.md  GITHUB_PAGES_SETUP.md  IMPROVE_MODEL_GUIDE.md  IMPROVE_TRAINING.md  LOCAL_CONVERSION_GUIDE.md  LOCAL_SOLUTION.md  PUBLISH_SUMMARY.md  QUICK_ALTERNATIVES.md  QUICK_FIX_COLAB.md  (+51 more)
components/sensor_manager/: CMakeLists.txt
components/sensor_manager/include/: sensor_integration.h
components/sensor_manager/src/: sensor_integration.c  sensor_manager.c
components/somnus_ble/: BLE_CRITICAL_REVIEW.md  CMakeLists.txt
components/somnus_ble/include/: somnus_ble.h
components/somnus_ble/src/: somnus_ble.c
components/somnus_ble/test/: test_ble_init.c
docs/: README.md  _config.yml  features.html  index.html  index.md  phase-0.9-spec.html  todo.html  wake-word-training-results.md
logs/: .c17df0a09c11410355893ebecdae655e0a7d061b-audit.json
main/: CMakeLists.txt  Kconfig.projbuild  action_manager.c  action_manager.h  app_main.c  audio_file_manager.c  audio_file_manager.h  audio_player.c  environmental_report.c  environmental_report.h  idf_component.yml  led_indicators.c  led_indicators.h  voice_assistant.c  wake_word_manager.c  wake_word_manager.h  webserver.c  webserver.h
scripts/: README.md  (+8 more)
(+13 files in other folders)
